...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5QP-Hn-OHY">
                                <rect key="frame" x="133" y="482" width="157" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="letsPlayBtn"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Let's Play" cornerStyle="large" buttonSize="large"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="GJ8-1M-oKz"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="hAI-RW-KO3"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Heart_Card14" translatesAutoresizingMaskIntoConstraints="NO" id="hLS-TH-zFB">
                                <rect key="frame" x="32" y="121" width="348" height="463"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="olI-zD-Uho">
                                <rect key="frame" x="135" y="608.66666666666663" width="144" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Draw" cornerStyle="large"/>
                                <connections>
                                    <action selector="drawACardButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qUG-fi-aV8"/>
                                    <segue destination="kvr-J5-W8J" kind="presentation" identifier="ShowRuleViewSegue" id="vrX-pY-taW"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1j-TO-5vN">
                                <rect key="frame" x="135" y="683.66666666666663" width="144" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Shuffle" cornerStyle="large"/>
                                <connections>
                                    <action selector="shuffleCardsButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zqG-E1-RBO"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Heart_Card14" translatesAutoresizingMaskIntoConstraints="NO" id="8fR-an-VnA">
                                <rect key="frame" x="85" y="98" width="240" height="512.33333333333337"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fs-NA-RLP">
                                <rect key="frame" x="327" y="20" width="67" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="closeButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <imageReference key="image" image="xmark" catalog="system" symbolScale="large" renderingMode="original"/>
                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="default"/>
                                </buttonConfiguration>
                                <connections>
...
